k8s/overlays/local/docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-management-service-docs
  namespace: dns-management-local
  labels:
    app.kubernetes.io/name: dns-management-service
    app.kubernetes.io/component: docs
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: dns-management-service
    app.kubernetes.io/component: docs
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
      nodePort: 30081
