k8s/overlays/local/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-management-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
      nodePort: 30080
