k8s/overlays/local/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dns-management-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: dns.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dns-management-service
                port:
                  name: http
